Bug 336668 - Right-to-left painting problems in item view header delegates
Summary: Right-to-left painting problems in item view header delegates
Status: RESOLVED FIXED
Alias: None
Product: QtCurve
Classification: Frameworks and Libraries
Component: qt5 (other bugs)
Version First Reported In: git
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Yichao Yu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-24 15:01 UTC by Eike Hein
Modified: 2014-10-04 23:13 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Item view header in RTL mode (1.27 KB, image/png)
2014-06-24 15:01 UTC, Eike Hein
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2014-06-24 15:01:04 UTC
The column dividers in header delegates are painted on the wrong side in RTL mode. And yeah, it's a style issue. Screenshot coming.

Reproducible: Always
Comment 1 Eike Hein 2014-06-24 15:01:30 UTC
Created attachment 87376 [details]
Item view header in RTL mode
Comment 2 Marco Martin 2014-07-01 13:47:49 UTC
probably all the qtcurve-specific issues should be also reported upstream
https://github.com/QtCurve/qtcurve/issues
(and i know, ideal is migrating qtcurve in our infrastructure, but the maintainer has to agree on that)
Comment 3 Eike Hein 2014-07-23 20:59:17 UTC
Resetting assignee.
Comment 4 Yichao Yu 2014-10-04 22:34:55 UTC
Git commit d50ee10e974e2266ccf9a8c2916a62e5ac1dc792 by Yichao Yu.
Committed on 04/10/2014 at 22:31.
Pushed by yuyichao into branch 'master'.

Draw list header separators at the right position for right-to-left layout.

M  +7    -4    qt4/style/qtcurve.cpp
M  +9    -8    qt5/style/qtcurve_api.cpp

http://commits.kde.org/qtcurve/d50ee10e974e2266ccf9a8c2916a62e5ac1dc792
Comment 5 Yichao Yu 2014-10-04 23:13:17 UTC
Note that this bug also affect the Qt4 version...