Draw list header separators at the right position for right-to-left layout.

BUG: 336668