qt4/style/qtcurve.cpp
@@ -5699,14 +5699,16 @@ void Style::drawControl(ControlElement element, const QStyleOption *option, QPai
                         if (q3Header ||
                             qtcNoneOf(ho->position, QStyleOptionHeader::End,
                                       QStyleOptionHeader::OnlyOneSection)) {
+                            // Draw header separator
+                            int sep_x = reverse ? r.x() : r.x() + r.width() - 2;
                             drawFadedLine(painter,
-                                          QRect(r.x() + r.width() - 2,
-                                                r.y() + 5, 1, r.height() - 10),
+                                          QRect(sep_x, r.y() + 5, 1,
+                                                r.height() - 10),
                                           use[QTC_STD_BORDER],
                                           true, true, false);
                             drawFadedLine(painter,
-                                          QRect(r.x() + r.width() - 1,
-                                                r.y() + 5, 1, r.height() - 10),
+                                          QRect(sep_x + 1, r.y() + 5, 1,
+                                                r.height() - 10),
                                           use[0], true, true, false);
                         }
                     } else {
@@ -5723,6 +5725,7 @@ void Style::drawControl(ControlElement element, const QStyleOption *option, QPai
                         if (q3Header ||
                             qtcNoneOf(ho->position, QStyleOptionHeader::End,
                                       QStyleOptionHeader::OnlyOneSection)) {
+                            // Draw header separator
                             drawFadedLine(painter,
                                           QRect(r.x() + 5,
                                                 r.y() + r.height() - 2,
